# SnakeAiCpp

./: CMakeLists.txt
src/: config.hpp  main.cpp
src/Engine/: engine.cpp  input.cpp  rng.cpp  snake.cpp
src/Engine/headers/: engine.hpp  rng.hpp  snake.hpp  snakepart.hpp  statstracker.hpp
src/Network/: genetic.cpp  genome.cpp  mutator.cpp
src/Network/headers/: activation.hpp  genetic.hpp  genome.hpp  mutator.hpp  threadpool.hpp
src/Render/: button.cpp  networkrenderer.cpp  renderer.cpp  snakerenderer.cpp  statsrenderer.cpp  trainingrenderer.cpp
src/Render/headers/: button.hpp  card.hpp  networkrenderer.hpp  renderer.hpp  snakerenderer.hpp  statsrenderer.hpp  textutils.hpp  traininginfo.hpp  trainingrenderer.hpp
